...
                                            )
                                          ],
                                        ),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('Email-Signup_xqf3'),
                                            controller: _model
                                                .emailSignupTextController,
                                            focusNode:
                                                _model.emailSignupFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                          )
                                        ],
                                      ),
                                      child: Container(
                                        width: 300.0,
                                        child: TextFormField(
                                          key: ValueKey('Password-Signup_ohrr'),
                                          controller: _model
                                              .passwordSignupTextController,
                                          focusNode:
                                              _model.passwordSignupFocusNode,
                                          autofocus: false,
                                          obscureText:
...
                                      ],
                                    ),
                                    child: Container(
                                      width: 300.0,
                                      child: TextFormField(
                                        key: ValueKey(
                                            'ConfirmPassword-Signup_rnei'),
                                        controller: _model
                                            .confirmPasswordSignupTextController,
                                        focusNode: _model
                                            .confirmPasswordSignupFocusNode,
                                        autofocus: false,
                                        obscureText: !_model
...
                        Align(
                          alignment: AlignmentDirectional(0.0, 0.0),
                          child: Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                0.0, 40.0, 0.0, 40.0),
                            child: FFButtonWidget(
                              key: ValueKey('Button_gpln'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'SIGNUP_PAGE_SIGN_UP_BTN_ON_TAP');
                                logFirebaseEvent('Button_validate_form');
                                if (_model.formKey.currentState == null ||
                                    !_model.formKey.currentState!.validate()) {
...
