...
                                        )
                                      ],
                                    ),
                                    child: Container(
                                      width: 322.0,
                                      child: TextFormField(
                                        key: ValueKey('Email-TextField_qg7y'),
                                        controller:
                                            _model.emailTextFieldTextController,
                                        focusNode:
                                            _model.emailTextFieldFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.emailTextFieldTextController',
...
                                    )
                                  ],
                                ),
                                child: Container(
                                  width: 322.0,
                                  child: TextFormField(
                                    key: ValueKey('Password-TextField_3cha'),
                                    controller:
                                        _model.passwordTextFieldTextController,
                                    focusNode:
                                        _model.passwordTextFieldFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.done,
...
                              ),
                            ],
                          ),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('Login-Button_6b52'),
                        onPressed: () async {
                          logFirebaseEvent('LOGIN_PAGE_Login-Button_ON_TAP');
                          logFirebaseEvent('Login-Button_auth');
                          GoRouter.of(context).prepareAuthEvent();

                          final user = await authManager.signInWithEmail(
...
