...
                                    )
                                  ],
                                ),
                                child: Container(
                                  width: 200.0,
                                  child: TextFormField(
                                    key: ValueKey('SearchBar-TextField_ewi7'),
                                    controller:
                                        _model.searchBarTextFieldTextController,
                                    focusNode:
                                        _model.searchBarTextFieldFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.searchBarTextFieldTextController',
...
                                ),
                              ),
                            if (currentUserUid != '')
                              Align(
                                alignment: AlignmentDirectional(0.0, 0.0),
                                child: FlutterFlowIconButton(
                                  key: ValueKey('IconButton_8xsr'),
                                  borderRadius: 64.0,
                                  buttonSize: 80.0,
                                  fillColor: Color(0xFFAB8424),
                                  icon: Icon(
                                    Icons.star,
                                    color: FlutterFlowTheme.of(context).info,
...
